<?xml version="1.0" encoding="utf-8"?>
   
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ScrollView
                android:id="@+id/text_about_scroll"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="17sp" />
            </ScrollView>

            <ScrollView
                android:id="@+id/text_credits_scroll"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/text_credits"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_credits"
                    android:textSize="17sp" />
            </ScrollView>

            <ScrollView
                android:id="@+id/text_thanks_scroll"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/text_thanks"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_thanks"
                    android:textSize="17sp" />
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</TabHost>
	
